<resources>
    <string name="app_name">Todo List</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="noEventName">Unnamed Task</string>
    <string name="noEventNotes">No Notes</string>
    <string name="noEventCategory">(No Category)</string>
    <string name="eventDetailNameLabel">Task Name: %s</string>
    <string name="eventDetailNotesLabel">Notes: %s</string>
    <string name="eventDetailCategoryLabel">Category: %s</string>
    <string name="eventDetailDateLabel">Due date: %s</string>
    <string name="eventDetailDateDaysLabel">(i.e. in %d day(s))</string>
    <string name="eventDetailNotifyLabel">Notification: %s</string>
    <string name="details_completed_btn">Task completed</string>
    <string name="details_edit_btn">Edit Task</string>
    <string name="event_name_hint">Event Name</string>
    <string name="event_notes_hint">Notes</string>
    <string name="event_category_hint">Event Category</string>
    <string name="event_notify_label">Notify me</string>
    <string name="event_save_btn">Save</string>

</resources>