<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditFragment">

    <ScrollView
        android:id="@+id/editScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CalendarView
                android:id="@+id/event_date_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

            <EditText
                android:id="@+id/event_name_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/event_name_hint"
                android:textSize="@dimen/text_regular"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/event_notes_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="start|top"
                android:hint="@string/event_notes_hint"
                android:inputType="textMultiLine"
                android:textSize="@dimen/text_regular"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/event_category_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/event_category_hint"
                android:textSize="@dimen/text_regular"
                android:importantForAutofill="no"
                android:inputType="text" />


            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/event_notify_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/event_notify_label" />

            <TextView
                android:id="@+id/event_notify_value"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:visibility="gone"/>

            <SeekBar
                android:id="@+id/event_notify_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:visibility="gone"
                android:min="0"
                android:max="31"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/save_event_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/event_save_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editScrollView"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>